test_output_5.txt
   Compiling p2p_core v0.1.0 (/app/p2p_core)
warning: unused import: `SinkExt`
 --> p2p_core/tests/security_ws_dos.rs:2:20
  |
2 | use futures_util::{SinkExt, StreamExt};
  |                    ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

error[E0282]: type annotations needed for `Vec<_>`
  --> p2p_core/tests/security_ws_dos.rs:40:9
   |
40 |     let mut clients = Vec::new();
   |         ^^^^^^^^^^^   ---------- type must be known at this point
   |
help: consider giving `clients` an explicit type, where the type for type parameter `T` is specified
   |
40 |     let mut clients: Vec<T> = Vec::new();
   |                    ++++++++

For more information about this error, try `rustc --explain E0282`.
warning: `p2p_core` (test "security_ws_dos") generated 1 warning
error: could not compile `p2p_core` (test "security_ws_dos") due to 1 previous error; 1 warning emitted
